@@ -1007,6 +1007,9 @@ request_types = {
     'modify-key': RT((SF('key'), SF('new-name', optional=True))),
     'list-key-users': RT((SF('key'),)),
     'grant-key-access': RT((SF('key'), SF('name'))),
+    'change-key-expiration': RT((SF('key'),
+                                 SF('subkey', optional=True),
+                                 YYYYMMDDField('expire-date', optional=True))),
     'revoke-key-access': RT((SF('key'), SF('name'))),
     'get-public-key': RT((SF('key'),)),
     'change-passphrase': RT((SF('key'),)),
@@ -1015,7 +1018,7 @@ request_types = {
                      BoolField('armor', optional=True)),
                     max_payload=1024*1024*1024),
     'sign-git-tag': RT((SF('key'),),
-                      max_payload=1024*1024*1024),
+                       max_payload=1024*1024*1024),
     'sign-container': RT((SF('key'),
                           SF('docker-reference')),
                          max_payload=1024*1024*1024),
