@@ -23,6 +23,7 @@ m4_include([basic.at])
 m4_include([ostree.at])
 m4_include([containers.at])
 m4_include([strict-usernames.at])
+m4_include([key-expiration.at])
 m4_include([bound-passphrase.at])
 m4_include([bound-passphrase-tpm.at])
 m4_include([kojikrb5.at])
